Adding base stylez

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -1,2 +1,27 @@
 @import "bootstrap/bootstrap.less";
 
+html, body {
+    height: 100%;
+}
+
+body {
+    position: relative;
+}
+
+form {
+    margin: 0;
+    text-align: center;
+    height: 30px;
+    padding: 12px;
+}
+
+/**
+ * Map
+ */
+
+.map-canvas {
+    position: absolute;
+    top: 54px;
+    bottom: 0;
+    width: 100%;
+}
