--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -22,6 +22,22 @@ form {
 .map-canvas {
     position: absolute;
     top: 54px;
+    right: 0;
+    min-height: 250px;
+    min-width: 250px;
+    width: 25%;
+    height: 25%;
+}
+
+.streetview {
+    position: absolute;
+    top: 54px;
     bottom: 0;
+    left: 0;
     width: 100%;
+}
+
+// Prevent max-width from affecting Google Maps
+.gmap img {
+    max-width: none;
 }
