--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -41,3 +41,20 @@ form {
 .gmap img {
     max-width: none;
 }
+
+.progress-bar td{
+  width:40px;
+  height:15px;
+}
+
+.red {
+  background-color:red;
+}
+
+.yellow {
+  background-color:yellow;
+}
+
+.green {
+  background-color:green;
+}
