--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -38,7 +38,7 @@ form {
 .streetview {
     position: absolute;
     top: 54px;
-    bottom: 0;
+    bottom: 100px;
     left: 0;
     width: 100%;
 }
@@ -48,9 +48,41 @@ form {
     max-width: none;
 }
 
-.progress-bar td{
-  width:40px;
-  height:15px;
+.controls {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.play-controls {
+    text-align: center;
+    width: 150px;
+    height: 83px;
+}
+
+#play {
+    width: 100px;
+}
+
+#next, #prev {
+    width: 30px;
+}
+
+.progress-bar {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 100px;
+    left: 150px;
+
+    table {
+        width: 100%;
+    }
+
+    td {
+      // width: 40px;
+      height: 150px;
+    }
 }
 
 .red {
