map/controls not shown until user selects route

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -34,6 +34,7 @@ form {
     min-width: 250px;
     width: 25%;
     height: 25%;
+    display: none;
 }
 
 .streetview {
@@ -53,6 +54,7 @@ form {
     position: absolute;
     bottom: 0;
     width: 100%;
+    display: none;
 }
 
 .play-controls {
