Less saturated timeline

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -87,13 +87,13 @@ form {
 }
 
 .red {
-  background-color:red;
+  background-color: #D7191C;
 }
 
 .yellow {
-  background-color:yellow;
+  background-color: #FEE08B;
 }
 
 .green {
-  background-color:green;
+  background-color: #91CF60;
 }
