--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -83,17 +83,18 @@ form {
     td {
       // width: 40px;
       height: 150px;
+      border: 1px solid;
     }
 }
 
 .red {
-  background-color:red;
+  background-color:#E5F5E0;
 }
 
 .yellow {
-  background-color:yellow;
+  background-color:#A1D99B;
 }
 
 .green {
-  background-color:green;
+  background-color:#31A354;
 }
