--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -12,7 +12,6 @@ body {
 form {
     margin: 0;
     text-align: center;
-    height: 30px;
     padding: 12px;
 }
 
@@ -23,12 +22,24 @@ form {
 }
 
 /**
- * Map
+ * Route controls
  */
+
+.route-controls {
+    overflow: hidden;
+}
+
+/**
+ * Map and Street View canvas
+ */
+
+.canvas {
+    position: relative;
+}
 
 .map-canvas {
     position: absolute;
-    top: 54px;
+    top: 0;
     right: 0;
     min-height: 250px;
     min-width: 250px;
@@ -38,7 +49,7 @@ form {
 
 .streetview {
     position: absolute;
-    top: 54px;
+    top: 0;
     bottom: 100px;
     left: 0;
     width: 100%;
@@ -52,6 +63,7 @@ form {
 .controls {
     position: absolute;
     bottom: 0;
+    height: @fluidGridColumnWidth + @fluidGridGutterWidth;
     width: 100%;
 }
 
@@ -61,7 +73,8 @@ form {
     height: 83px;
 }
 
-#play {
+#play,
+#pause {
     width: 100px;
 }
 
@@ -69,20 +82,25 @@ form {
     width: 30px;
 }
 
-.progress-bar {
+.progress {
+    margin: 0;
     position: absolute;
     bottom: 0;
     right: 0;
-    height: 100px;
+    height: 100%;
     left: 150px;
 
     table {
         width: 100%;
+        height: 80%;
+        margin-top: 10px;
     }
 
     td {
       // width: 40px;
-      height: 150px;
+      .box-shadow(inset 0 -1px 0 rgba(0,0,0,.25));
+      height: 100%;
+
     }
 }
 
@@ -97,3 +115,37 @@ form {
 .green {
   background-color: #91CF60;
 }
+
+/**
+ * Icons
+ */
+
+@font-face {
+    font-family: 'reroute';
+    src: url("../fonts/reroute.eot");
+    src: url("../fonts/reroute.eot?#iefix") format('embedded-opentype'), url("../fonts/reroute.woff") format('woff'), url("../fonts/reroute.ttf") format('truetype')  , url(".../fonts/reroute.svg#reroute") format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+    font-family: 'reroute';
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: 0.2em;
+    text-align: center;
+    opacity: 0.7;
+    /* Uncomment for 3D effect */
+    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+    /* fix buttons height */
+      line-height: 1em;
+    /* you can be more comfortable with increased icons size */
+    /* font-size: 120%; */
+}
+
+.icon-pause:before { content: '\2389'; } /* '⎉' */
+.icon-play:before { content: '\25b6'; } /* '▶' */
