--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -21,6 +21,12 @@ form {
     right: 15px;
 }
 
+header {
+    h1 {
+        margin-left: @fluidGridGutterWidth;
+    }
+}
+
 /**
  * Route controls
  */
@@ -92,27 +98,24 @@ form {
 
     table {
         width: 100%;
-        height: 80%;
-        margin-top: 10px;
+        height: 150px;
     }
 
     td {
-      // width: 40px;
-      height: 150px;
-      border: 1px solid;
+        .box-shadow(inset 0 0 2px rgba(0, 0, 0, 0.5));
     }
 }
 
 .red {
-  background-color:#E5F5E0;
+    background-color:#E5F5E0;
 }
 
 .yellow {
-  background-color:#A1D99B;
+    background-color:#A1D99B;
 }
 
 .green {
-  background-color:#31A354;
+    background-color:#31A354;
 }
 
 /**
