--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -84,7 +84,12 @@ form {
       // width: 40px;
       height: 150px;
       border: 1px solid;
+
     }
+
+   .highlighted {
+     border: 5px solid red;
+   }
 }
 
 .red {
