Time and distance showing

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -32,8 +32,14 @@ header {
  * Route controls
  */
 
-.route-controls {
-    overflow: hidden;
+.route-info {
+	text-align: center;
+	position: relative;
+	top: 17px;
+}
+
+.route-info .label {
+	font-size: 18px;
 }
 
 /**
