Route info now shows total climb

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -179,16 +179,17 @@ header {
   z-index: 99;
 }
 
-.route-info {
+#route-info {
   top: 218px;
   background: black;
   color: white;
   opacity: 0.8;
   padding: 6px;
   width: 100%;
+  display: none;
 }
 
-.route-info .link {
+#route-info .link {
   background: white;
   color: black;
   padding: 3px 7px;
