Add screenshots to intro

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -120,6 +120,14 @@ header {
             }
         }
 
+        figure {
+            padding: 10px;
+            background: #fff;
+            .border-radius(6px);
+            border: 1px solid #333
+            margin: 0;
+        }
+
         form {
             .transition(background-color 0.4s @cubic);
             background: rgba(0,0,0,0.5);
