Fix locations bar width after landing page

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -98,6 +98,8 @@ header {
     @routeInputFontSize: 20px;
 
     display: inline-block !important;
+    width: 100%;
+    
     .transition(all 1.2s @cubic);
 
     .control-group {
