Restyling the secondary view container.

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -200,8 +200,8 @@ header {
 // In the corner
 .secondary {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 20px;
+    right: 25px;
     min-height: 250px;
     min-width: 250px;
     width: 25%;
@@ -313,9 +313,6 @@ header {
 }
 
 #route-info .link {
-  background: white;
-  color: black;
-  padding: 3px 7px;
   margin-left: 10px;
 }
 
