Adds drop shadow styling and makes the secondary view fade in.

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -207,6 +207,9 @@ header {
     width: 25%;
     height: 25%;
     z-index: @zindexOverMap;
+    .box-shadow(4px 4px 4px rgba(0,0,0, 0.48));
+    border: solid 6px white;
+    display:none;
 }
 
 // huuuge
