Installing complete fontawesome icon library.

--- a/public/less/bootstrap.less
+++ b/public/less/bootstrap.less
@@ -26,7 +26,8 @@
 @import "bootstrap/tables.less";
 
 // Components: common
-@import "bootstrap/sprites.less";
+//@import "bootstrap/sprites.less";
+@import "bootstrap/font-awesome.less";
 @import "bootstrap/dropdowns.less";
 @import "bootstrap/wells.less";
 @import "bootstrap/component-animations.less";
