Adjust width of route controls when it slides in to the header.

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -84,6 +84,10 @@ header {
     text-align: center;
 }
 
+.route-wrapper.header {
+    width: auto;
+}
+
 .route-info {
 	text-align: center;
 	position: relative;
