--- a/views/main.erb
+++ b/views/main.erb
@@ -3,7 +3,9 @@
 <head>
     <title>wiggle</title>
     <link rel="stylesheet/less" type="text/css" href="less/styles.less">
-    <link rel=" stylesheet" type="text/css" href="styles/joyride-2.0.1.css">
+    <link rel="stylesheet" type="text/css" href="styles/joyride-2.0.1.css">
+
+    <!-- We're in alpha! optimizations later -->
     <script src="js/lib/less/less.min.js" type="text/javascript"></script>
     <script src="js/jquery.js"></script>
     <script src="js/lib/lodash/lodash.min.js"></script>
