Change title to WiggleMap

--- a/views/main.erb
+++ b/views/main.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>wiggle</title>
+    <title>WiggleMap</title>
     <link rel="stylesheet/less" type="text/css" href="less/styles.less">
     <link rel="stylesheet" type="text/css" href="styles/joyride-2.0.1.css">
 
