Adding a route that uses teh wiggle

--- a/views/main.erb
+++ b/views/main.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
 <head>
     <title>WiggleMap</title>
@@ -76,7 +76,7 @@
 
                             <div class="input-prepend">
                                 <span class="add-on">A</span>
-                                <input type="text" id="start-location" name="start-location" class="start-location" value="Hayes Valley, San Francisco" placeholder="Start" />
+                                <input type="text" id="start-location" name="start-location" class="start-location" value="de Young Museum, San Francisco" placeholder="Start" />
                             </div>
                         </div>
 
@@ -87,7 +87,7 @@
 
                             <div class="input-prepend">
                                 <span class="add-on">B</span>
-                                <input type="text" id="end-location" class="end-location" name="end-location" value="2nd and Folsom, San Francisco" placeholder="End" />
+                                <input type="text" id="end-location" class="end-location" name="end-location" value="16th and Valencia, San Francisco" placeholder="End" />
                             </div>
                         </div>
 
