--- a/views/main.erb
+++ b/views/main.erb
@@ -76,7 +76,7 @@
 
                             <div class="input-prepend">
                                 <span class="add-on">A</span>
-                                <input type="text" id="start-location" name="start-location" class="start-location" value="de Young Museum, San Francisco" placeholder="Start" />
+                                <input type="text" id="start-location" name="start-location" class="start-location" value="Alamo Square, San Francisco" placeholder="Start" />
                             </div>
                         </div>
 
