Added in meta tags

--- a/views/main.erb
+++ b/views/main.erb
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>WiggleMap</title>
@@ -15,7 +15,11 @@
     <script src="js/jquery.joyride-2.0.1.js"></script>
     <script src="js/jquery.cookie.js"></script>
   
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+
+    <meta property="og:site_name" content="WiggleMap"> 
+    <meta property="og:url" content="http://www.wigglemap.com">
+    <meta property="og:description" content="WiggleMap provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY4i1NNxuNos3bn5kx9_t5-LRtgi7RQ7I&sensor=true"></script>
 
