--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -333,3 +333,14 @@ header {
   margin-left: 10px;
 }
 
+.fb-like {
+  float:right;
+}
+
+.title-div {
+  height:50px;
+}
+
+.title {
+  float:left;
+}
