--- a/views/main.erb
+++ b/views/main.erb
@@ -32,9 +32,21 @@
     </script>
 </head>
 <body class="intro">
-    <header class="masthead transition">
-        <h1>WiggleMap</h1>
+<div id="fb-root"></div>
 
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=499093340120475";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+    <header class="masthead transition">
+        <div class="title-div">
+          <div class="title"><h1 class="map-title">WiggleMap</h1></div>
+          <div class="fb-like" data-href="http://www.facebook.com/WiggleMap" data-send="false" data-width="450" data-show-faces="true"></div>
+        </div>
 
         <div class="route-wrapper overlay">
 
