facebook button style

--- a/views/main.erb
+++ b/views/main.erb
@@ -49,7 +49,7 @@
     <header class="masthead transition">
         <div class="title-div">
           <div class="title"><h1 class="map-title">WiggleMap</h1></div>
-          <div class="fb-like" data-href="http://www.facebook.com/WiggleMap" data-send="false" data-width="450" data-show-faces="true"></div>
+          <div class="fb-like" data-href="http://www.facebook.com/WiggleMap" data-send="false" data-width="450" data-show-faces="false"></div>
         </div>
 
         <div class="route-wrapper overlay">
