--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -338,10 +338,13 @@ header {
 }
 
 .title-div {
+  width:90%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
   height:50px;
 }
 
 .title {
-  margin-left:120px;
   float:left;
 }
