--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -334,15 +334,18 @@ header {
 }
 
 .fb-like {
-  float:right;
+  float: left;
+margin-left: 50px;
+margin-top: 1%;
 }
 
 .title-div {
-  width:90%;
+  -width:90%;
   max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  height:50px;
+  margin-left: 2.127659574468085%;
+  -margin-left: auto;
+  -margin-right: auto;
+  height:35px;
 }
 
 .title {
