Tweaked box shadow styles on header and .secondary
Made them softer

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -41,7 +41,7 @@ header {
     padding: 10px 0;
     position: relative;
     z-index: @zindexOverMap + 1;
-    .box-shadow(0 4px 0 rgba(0,0,0, 0.18));
+    .box-shadow(0px 1px 2px rgba(0,0,0,0.3));
 
     h1 {
         margin: 0;
@@ -238,7 +238,7 @@ header {
     width: 25%;
     height: 25%;
     z-index: @zindexOverMap;
-    .box-shadow(4px 4px 4px rgba(0,0,0, 0.48));
+    .box-shadow(0px 1px 3px rgba(0,0,0,0.4));
     border: solid 6px white;
     display:none;
 }
