Renamed "List" button to "List turns"
Should be more descriptive this way.

--- a/views/main.erb
+++ b/views/main.erb
@@ -121,7 +121,7 @@
         <div id="streetview" class="secondary gmap over-map fade">
             <div id="route-info" class="over-map">
                 <span class="metrics"></span>
-                <a href="#" class="link btn btn-mini">List</a>
+                <a href="#" class="link btn btn-mini">List turns</a>
             </div>
         </div>
         <div id="map_canvas" class="primary gmap"></div>
