--- a/views/main.erb
+++ b/views/main.erb
@@ -17,10 +17,14 @@
   
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 
-    <meta property="og:site_name" content="WiggleMap"> 
+    <meta property="og:title" content="WiggleMap">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="../public/images/wiggle-thumb.png">
     <meta property="og:url" content="http://www.wigglemap.com">
+    <meta property="og:site_name" content="WiggleMap"> 
     <meta property="og:description" content="WiggleMap provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
     <meta name="description" content="WiggleMap provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
+    <meta property="fb:admins" content="humaninterfaces,eric.x.tang"/>
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY4i1NNxuNos3bn5kx9_t5-LRtgi7RQ7I&sensor=true"></script>
 
