--- a/views/main.erb
+++ b/views/main.erb
@@ -97,7 +97,9 @@
 
                             <div class="input-prepend">
                                 <span class="add-on">A</span>
-                                <input type="text" id="start-location" name="start-location" class="start-location" value="Alamo Square, San Francisco" placeholder="Start" />
+                                <div class="input-wrap">
+                                    <input type="text" id="start-location" name="start-location" class="start-location" value="Alamo Square, San Francisco" placeholder="Start" />
+                                </div>
                             </div>
                         </div>
 
@@ -108,7 +110,9 @@
 
                             <div class="input-prepend">
                                 <span class="add-on">B</span>
-                                <input type="text" id="end-location" class="end-location" name="end-location" value="16th and Valencia, San Francisco" placeholder="End" />
+                                <div class="input-wrap">
+                                    <input type="text" id="end-location" class="end-location" name="end-location" value="16th and Valencia, San Francisco" placeholder="End" />
+                                </div>
                             </div>
                         </div>
 
