--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -168,6 +168,7 @@ header {
     .btn {
         width: 100%;
         font-size: @routeInputFontSize - 2px;
+        box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
     }
 
     .halp {
