trying a mixpanel event
"home page loaded"

--- a/views/main.erb
+++ b/views/main.erb
@@ -163,5 +163,8 @@ g=a[f]=[]:f="mixpanel";g.people=g.people||[];h="disable track track_pageview tra
       <li data-id="play" data-options="tipLocation:top;tipAnimation:fade" data-button="Next tip"><h3>Start your ride</h3><p>Start a virtual ride of your route.</p></li>   
       <li><h3>Have a fun ride!</h3><p></p></li>
     </ol>
+    <script type="text/javascript">
+        mixpanel.track("Home Page Loaded")
+    </script>
 </body>
 </html>
