--- a/views/main.erb
+++ b/views/main.erb
@@ -4,6 +4,9 @@
     <title>WiggleMap | Safe bike routes and maps with streetview</title>
     <link rel="stylesheet/less" type="text/css" href="less/styles.less">
     <link rel="stylesheet" type="text/css" href="styles/joyride-2.0.1.css">
+    <link rel="icon" type="image/ico" href="../public/images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="114x114" href="../public/images/touch-icon-iphone4.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../public/images/touch-icon-ipad.png">
 
     <!-- We're in alpha! optimizations later -->
     <script src="js/lib/less/less.min.js" type="text/javascript"></script>
