--- a/views/main.erb
+++ b/views/main.erb
@@ -117,7 +117,7 @@
                         </div>
 
                         <div class="control-group span2">
-                            <input type="submit" id="submit-button" class="btn btn-primary btn-large" value="Find a route" />
+                            <input type="submit" id="submit-button" class="btn btn-primary btn-large" onClick="_gaq.push(['_trackEvent', 'ButtonClick', 'RouteSubmit', 'Yay']);" "Find a route" />
                         </div>
                     </form>
                 </div>
