add keyword tags, SEO optimization

--- a/views/main.erb
+++ b/views/main.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WiggleMap | Safe bike routes and maps with streetview</title>
+    <title>Wiggle Map | Safe bike routes and maps with streetview</title>
     <link rel="stylesheet/less" type="text/css" href="less/styles.less">
     <link rel="stylesheet" type="text/css" href="styles/joyride-2.0.1.css">
     <link rel="icon" type="image/ico" href="../public/images/favicon.ico">
@@ -19,13 +19,14 @@
     <script src="js/jquery.cookie.js"></script>
   
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta name="keywords" content="wiggle,map,bike,bicycle,san francisco">
 
-    <meta property="og:title" content="WiggleMap">
+    <meta property="og:title" content="Wiggle Map">
     <meta property="og:type" content="website">
     <meta property="og:image" content="../public/images/wiggle-thumb.png">
     <meta property="og:url" content="http://www.wigglemap.com">
-    <meta property="og:site_name" content="WiggleMap"> 
-    <meta property="og:description" content="WiggleMap provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
+    <meta property="og:site_name" content="Wiggle Map"> 
+    <meta property="og:description" content="Wiggle Map provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
     <meta name="description" content="WiggleMap provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
     <meta property="fb:admins" content="humaninterfaces,eric.x.tang"/>
 
