updated the fb og url tag
from www.wigglemap.com to without wigglemap.com

--- a/views/main.erb
+++ b/views/main.erb
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Wiggle Map">
     <meta property="og:type" content="website">
     <meta property="og:image" content="../public/images/wiggle-thumb.png">
-    <meta property="og:url" content="http://www.wigglemap.com">
+    <meta property="og:url" content="http://wigglemap.com">
     <meta property="og:site_name" content="Wiggle Map"> 
     <meta property="og:description" content="Wiggle Map provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
     <meta name="description" content="WiggleMap provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
