--- a/views/main.erb
+++ b/views/main.erb
@@ -4,9 +4,9 @@
     <title>Wiggle Map | Safe bike routes and maps with streetview</title>
     <link rel="stylesheet/less" type="text/css" href="less/styles.less">
     <link rel="stylesheet" type="text/css" href="styles/joyride-2.0.1.css">
-    <link rel="icon" type="image/ico" href="../public/images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="114x114" href="../public/images/touch-icon-iphone4.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../public/images/touch-icon-ipad.png">
+    <link rel="icon" type="image/ico" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/touch-icon-iphone4.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/touch-icon-ipad.png">
 
     <!-- We're in alpha! optimizations later -->
     <script src="js/lib/less/less.min.js" type="text/javascript"></script>
@@ -23,7 +23,7 @@
 
     <meta property="og:title" content="Wiggle Map">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="../public/images/wiggle-thumb.png">
+    <meta property="og:image" content="/images/wiggle-thumb.png">
     <meta property="og:url" content="http://wigglemap.com">
     <meta property="og:site_name" content="Wiggle Map"> 
     <meta property="og:description" content="Wiggle Map provides bike directions with a focus on safety and presents the road from a rider's point of view. We hope this will help more people gain enough confidence to get around the city by bike.">
